# paraglob

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .update-changes.cfg  AhoCorasickPlus.cpp  AhoCorasickPlus.h  CHANGES  CMakeLists.txt  COPYING  Makefile  README.md  RequireCXX11.cmake  RequireCXX17.cmake  RequireCXXStd.cmake  VERSION  benchmark.cpp  benchmark.h  configure  driver.c  driver.cpp  paraglob.c  paraglob.cpp  paraglob.h  paraglobNode.cpp  paraglobNode.h  set.h  vector.h
.github/workflows/: codeql.yml
ahocorasick/: AhoCorasickPlus.cpp  AhoCorasickPlus.h  CMakeLists.txt  README  mpool.c
include/paraglob/: exceptions.h  node.h  paraglob.h  serializer.h
multifast-ac/: Makefile  actypes.h  ahocorasick.c
src/: CMakeLists.txt  paraglob.cpp  paraglob.h  paraglobNode.h  paraglob_exceptions.h  paraglob_node.h  paraglob_serializer.cpp  paraglob_serializer.h  string_vector_serializer.cpp  string_vector_serializer.h
src/ahocorasick/: AhoCorasickPlus.cpp  AhoCorasickPlus.h  CMakeLists.txt  mpool.c  node.c
testing/: btest.cfg
testing/Baseline/driver.basic_matches/: out
testing/Baseline/driver.empty_patterns/: out
testing/Baseline/driver.serial/: out2
testing/Baseline/driver.time/: out
testing/driver/: basic-matches  basic_matches  empty_patterns  patterns1  patterns2  patterns3  serial  time
tools/: CMakeLists.txt  benchmark.cpp  benchmark.h  driver.cpp
tools/testing/: btest.cfg
tools/testing/driver/: basic_matches  empty_patterns  time
